# HermesArc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: library.h
src/: library.cpp
